Archive2/c2/913bfcccbe407d/output
main.cpp: In constructor 'Derived::Derived(std::vector<float>)':
main.cpp:12:37: error: class 'Derived' does not have any field named 'fVec'
     Derived(std::vector<float> v) : fVec(v)
                                     ^
